final working framework

--- a/Selenium/Artifact/pom.xml
+++ b/Selenium/Artifact/pom.xml
@@ -59,11 +59,11 @@
 			<artifactId>cucumber-reporting</artifactId>
 			<version>4.6.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.11.2</version>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest -->
 		<dependency>
@@ -71,6 +71,11 @@
 			<artifactId>java-hamcrest</artifactId>
 			<version>2.0.0.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.apple</groupId>
+			<artifactId>AppleJavaExtensions</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 	</dependencies>
@@ -113,7 +118,15 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
